@@ -14,3 +14,8 @@ SPIDER WORKS! Game data is now populated from lmce_game database!
 
 2008-04-11 23:44	(tschak)
 Refactored to be the new #1926 device template.
+
+2008-05-03 01:15	(tschak)
+Added a Bind to all orbiters in StartMedia so that when games are changed in
+Playlist the on-screen orbiter is properly updated and the mame window gets
+reparented properly, even though it goes away.
